@@ -26,10 +26,9 @@
 
 #define MAKETIMESTUFF(x)  (BE (maketimestuff)-> x)
 
-/* For maximum portability, use only ‘localtime’ and ‘gmtime’.  Make no
-   assumptions about the ‘time_t’ epoch or the range of ‘time_t’ values.
+/* Make no assumptions about the ‘time_t’ epoch or the range of ‘time_t’ values.
    Avoid ‘mktime’ because it's not universal and because there's no easy,
-   portable way for ‘mktime’ to return the inverse of ‘gmtime’.  */
+   portable way for ‘mktime’ to return the inverse of ‘gmtime_r’.  */
 
 #define TM_YEAR_ORIGIN 1900
 
@@ -57,7 +56,7 @@ month_days (struct tm const *tm)
 struct tm *
 time2tm (time_t unixtime, bool localzone)
 /* Convert ‘unixtime’ to ‘struct tm’ form.
-   Use ‘gmtime’ if available and if ‘!localzone’, ‘localtime’ otherwise.  */
+   Use ‘gmtime_r’ if available and if ‘!localzone’, ‘localtime_r’ otherwise.  */
 {
   struct tm *tm;
 
@@ -66,8 +65,8 @@ time2tm (time_t unixtime, bool localzone)
     PFATAL
       ("The TZ environment variable is not set; please set it to your timezone");
 #endif
-  if (localzone || !(tm = gmtime (&unixtime)))
-    tm = localtime (&unixtime);
+  if (localzone || !(tm = gmtime_r (&unixtime, &MAKETIMESTUFF (time2tm_stash))))
+    tm = localtime_r (&unixtime, &MAKETIMESTUFF (time2tm_stash));
   return tm;
 }
 
@@ -150,12 +149,12 @@ adjzone (register struct tm *t, long seconds)
 
 time_t
 tm2time (struct tm *tm, bool localzone)
-/* Convert ‘tm’ to ‘time_t’, using ‘localtime’ if ‘localzone’ and ‘gmtime’
+/* Convert ‘tm’ to ‘time_t’, using ‘localtime_r’ if ‘localzone’ and ‘gmtime_r’
    otherwise.  From ‘tm’, use only ‘year’, ‘mon’, ‘mday’, ‘hour’, ‘min’,
    and ‘sec’ members.  Ignore old members ‘tm_yday’ and ‘tm_wday’, but
    fill in their correct values.  Return -1 on failure (e.g. a member out
    of range).  POSIX 1003.1-1990 doesn't allow leap seconds, but some
-   implementations have them anyway, so allow them if ‘localtime’/‘gmtime’
+   implementations have them anyway, so allow them if ‘localtime_r’/‘gmtime_r’
    does.  */
 {
   time_t d, gt;
@@ -204,7 +203,7 @@ tm2time (struct tm *tm, bool localzone)
 static time_t
 maketime (struct partime const *pt, time_t default_time)
 /* Check ‘*pt’ and convert it to ‘time_t’.  If it is incompletely specified,
-   use ‘default_time’ to fill it out.  Use ‘localtime’ if ‘pt->zone’ is the
+   use ‘default_time’ to fill it out.  Use ‘localtime_r’ if ‘pt->zone’ is the
    special value ‘TM_LOCAL_ZONE’.  Return -1 on failure.  ISO 8601 day-of-year
    and week numbers are not yet supported.  */
 {
